--- a/ExpandableListView/app/src/main/AndroidManifest.xml
+++ b/ExpandableListView/app/src/main/AndroidManifest.xml
@@ -10,15 +10,16 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
+            android:windowSoftInputMode="adjustResize|stateHidden"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Project1Step1Activity" />
+
+        <activity android:name=".Project1Step1Activity"></activity>
         <activity android:name=".Project1Step2Activity"></activity>
     </application>
 
