--- a/SOP_v1/app/build.gradle
+++ b/SOP_v1/app/build.gradle
@@ -24,4 +24,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+    compile 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
+    compile('com.wu-man:android-oauth-client:0.0.3') {
+        exclude module: 'support-v4'
+    }
+    compile 'com.github.clans:fab:1.6.0'
 }
