--- a/SOP_v1/app/src/main/AndroidManifest.xml
+++ b/SOP_v1/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cc.ncu.edu.tw.sop_v1">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -33,6 +35,14 @@
         <activity
             android:name=".ballot"
             android:label="@string/title_activity_ballot"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".add_new_one"
+            android:label="@string/title_activity_add_new_one"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".DetailStepActivity"
+            android:label="@string/title_activity_detail_step"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
